--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,35 +1,22 @@
 name: Deploy Next.js site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
-  
-defaults:
-      run:
-        working-directory: ./dianych-website
+
 jobs:
-  # Build job
-    build:
+  build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./dianych-website
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,34 +26,21 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          # This tells the cache where your lock file is
-          cache-dependency-path: dianych-website/package-lock.json
+          cache-dependency-path: ./dianych-website/package-lock.json
 
       - name: Install dependencies
+        working-directory: ./dianych-website
         run: npm ci
 
-      - name: Build
+      - name: Build static site
+        working-directory: ./dianych-website
         run: npm run build
-      - name: Restore cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            .next/cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-      - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: ./dianych-website/out
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
