fix translations add update.sh

--- a/dianych-website/package.json
+++ b/dianych-website/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "embla-carousel-react": "^8.6.0",
+    "iron-session": "^8.0.4",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
