--- a/dianych-website/package.json
+++ b/dianych-website/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "hash-pw": "node scripts\\hash-pw.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
